# etesters

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  etesters.rst  index.rst  modules.rst
eagle_default/: ETESTER-0.brd  ETESTER-1.brd  ETESTER-1.sch  ETESTER-2.brd  ETESTER-2.sch  ETESTER-3.brd  ETESTER-3.sch  STGHW00054_A2.brd  STGHW00054_A2.sch  default.sch  e-TESTER_from brd.brd
etesters/: __init__.py  create_eagle_files.py  default.brd  download_files.py  draw_gerber.py  excellon_files.py  lighten_color.py  menu.py  pcb_dimension.py  select_test_points.py
examples/new_files/: STGHW00054_A2_PnP_back.csv  STGHW00054_A2_PnP_front.csv  etesters001.brd  etesters001.sch
examples/production/: STGHW00054_A2-AssemblyTOP.GTA  STGHW00054_A2-CopperBOT_L4.GBL  STGHW00054_A2-CopperTOP_L1.GTL  STGHW00054_A2-ExcellonNonPlated-1-16.TXT  STGHW00054_A2-ExcellonPlated-1-16.TXT  STGHW00054_A2-ImpedanceTOP.GTI  STGHW00054_A2-LegendTOP.GTO  STGHW00054_A2-MechanicalPlated.GKO  STGHW00054_A2-SoldermaskBOT.GBS  STGHW00054_A2-SoldermaskTOP.GTS  STGHW00054_A2_PnP_back.csv
production/: STGHW00054_A2-AssemblyBOT.GTA  STGHW00054_A2-CopperINNER_L2.GL2  STGHW00054_A2-CopperINNER_L3.GL3  STGHW00054_A2-LegendBOT.GBO  STGHW00054_A2-MechanicalNonPlated.GKO  STGHW00054_A2-SolderpasteBOT.GBP  STGHW00054_A2-SolderpasteTOP.GTP  STGHW00054_A2_PnP_front.csv
