[tool.poetry]
name = "etesters"
version = "0.1.0"
description = ""
authors = ["Dylan Bernhardt <dylan1122@outlook.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
typeguard = "^2.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
